<?xml version="1.0"?>
<package format="2">
  <name>habitat_ros</name>
  <version>0.1.0</version>
  <description>A ROS interface to Habitat-Sim</description>
  <author>Sotiris Papatheodorou</author>
  <maintainer email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
